include_HEADERS = \
	libscca.h

pkginclude_HEADERS = \
	libscca/codepage.h \
	libscca/definitions.h \
	libscca/error.h \
	libscca/extern.h \
	libscca/features.h \
	libscca/types.h

EXTRA_DIST = \
	libscca.h.in \
	libscca/definitions.h.in \
	libscca/features.h.in \
	libscca/types.h.in

DISTCLEANFILES = \
	libscca.h \
	libscca/definitions.h \
	libscca/features.h \
	libscca/types.h \
	Makefile \
	Makefile.in

