MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libscca/libscca.vcproj \
	libuna/libuna.vcproj \
	pyscca/pyscca.vcproj \
	scca_test_error/scca_test_error.vcproj \
	scca_test_file/scca_test_file.vcproj \
	scca_test_file_metrics/scca_test_file_metrics.vcproj \
	scca_test_notify/scca_test_notify.vcproj \
	scca_test_open_close/scca_test_open_close.vcproj \
	scca_test_support/scca_test_support.vcproj \
	scca_test_volume_information/scca_test_volume_information.vcproj \
	sccainfo/sccainfo.vcproj \
	libscca.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

